Navigation Bar Z-Index Issue Fixed

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ header nav {
     position: fixed;
     top: 0px;
     width: 100%;
+    z-index: 1;
     box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.4);
     background: var(--main-red);
 }
